--- a/HW-15-React. Intro/post-app/package.json
+++ b/HW-15-React. Intro/post-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://Nadiia-Mykhalevych.github.io/cursor--homework-Nadiia",
+  "homepage":"http://Nadiia-Mykhalevych.github.io/cursor--homework-Nadiia/HW-15-React. Intro/post-app",
   "name": "post-app",
   "version": "0.1.0",
   "private": true,
